--- a/index.html
+++ b/index.html
@@ -22,42 +22,43 @@
 </head>
 
 <body class=" lato">
-    <!-- Nabver Start -->
     <nav class="flex justify-between my-[3.25rem] max-w-screen-xl mx-auto">
-        <!-- logo and Name -->
-        <div class="flex">
-            <img src="./images/logo.webp" alt="">
+        <div class="flex items-center">
+            <img src="./images/logo.webp" alt="" class="w-10">
             <p class="ml-5 text-3xl">Peddy</p>
         </div>
-        <!-- Nav List -->
-        <div class="list-none flex justify-evenly">
-            <li class="ml-5 text-lg">Home</li>
-            <li class="ml-5 text-lg">Shop</li>
-            <li class="ml-5 text-lg">Contact</li>
+        <div class="hidden lg:flex space-x-4">
+            <a href="#" class="text-lg">Home</a>
+            <a href="#" class="text-lg">Shop</a>
+            <a href="#" class="text-lg">Contact</a>
         </div>
-        <!-- user -->
-        <div class="border p-4 rounded-full flex items-center justify-center">
-            <i class="fa-regular fa-user"></i>
+        <div class="flex items-center space-x-4">
+            <div class="border p-4 rounded-full">
+                <i class="fa-regular fa-user"></i>
+            </div>
+            <button id="mobile-menu-button" class="lg:hidden">
+                <i class="fa-solid fa-bars"></i>
+            </button>
         </div>
+    </nav>
+    <div id="mobile-menu" class="hidden lg:hidden">
+        <a href="#" class="block py-2 px-4">Home</a>
+        <a href="#" class="block py-2 px-4">Shop</a>
+        <a href="#" class="block py-2 px-4">Contact</a>
+    </div>
     </nav>
     <!-- Nabver End -->
     <main class="max-w-screen-xl mx-auto">
         <!-- Hero Section -->
         <section class="flex flex-col justify-center items-center">
             <div>
-                <!-- Title -->
                 <h1 class="text-lg text-center">Bringing Families Together ❤️‍🔥<br>
-
                     <span class="lg:text-7xl text-2xl font-bold ">Your Path to Adoption <br> Starts Here</span>
                 </h1>
-                <p class="lg:w-1/2 lg:mx-auto mx-2 my-10">It is a long established fact that a reader will be distracted
-                    by
-                    the
-                    readable content
-                    of a page when
-                    looking at its layout. The point of using Lorem Ipsum is that it has a.</p>
+                <p class="lg:w-1/2 lg:mx-auto mx-2 my-10">...</p>
             </div>
-            <button class="bg-[#0E7A81] text-white p-5 rounded-md font-bold text-xl">View More</button>
+            <button id="view-more-button" class="bg-[#0E7A81] text-white p-5 rounded-md font-bold text-xl">View
+                More</button>
             <div>
                 <img src="./images/pet.webp" alt="">
             </div>
@@ -85,8 +86,17 @@
             <!-- Cards -->
             <div class="cardCantrainer flex justify-between items-center">
                 <div class="cards grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5" id="cards"></div>
+                <div id="imagecontrainer"></div>
             </div>
         </section>
+        <div id="pet-details-modal" class="hidden fixed inset-0 bg-black bg-opacity-50  justify-center items-center">
+            <div class="bg-white p-8 rounded-lg w-1/2">
+                <h2 id="modal-pet-name" class="text-2xl font-bold mb-4"></h2>
+                <div id="modal-details"></div>
+                <button id="close-modal-button" class="bg-gray-300 p-2 rounded-md mt-4">Close</button>
+            </div>
+        </div>
+
 
     </main>
     <footer class="bg-[#131313]">
