--- a/index.html
+++ b/index.html
@@ -79,21 +79,23 @@
                 <div class="">
                     <h1 class="text-2xl font-bold">Best Deal For you</h1>
                 </div>
-                <div class="bg-[#0E7A81] text-white p-3 rounded-xl">
-                    <button class="text-2xl">Sort by Price</button>
+                <div id="Sortbutton" class="bg-[#0E7A81] text-white p-3 rounded-xl">
+                    <button class="text-2xl Sortbutton">Sort by Price</button>
                 </div>
             </div>
             <!-- Cards -->
-            <div class="cardCantrainer flex justify-between items-center">
+            <div class="cardCantrainer flex justify-between">
                 <div class="cards grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-5" id="cards"></div>
-                <div id="imagecontrainer"></div>
+                <div class="flex justify-center ml-8">
+                    <div id="imagecontrainer"></div>
+                </div>
             </div>
         </section>
         <div id="pet-details-modal" class="hidden fixed inset-0 bg-black bg-opacity-50  justify-center items-center">
             <div class="bg-white p-8 rounded-lg w-1/2">
                 <h2 id="modal-pet-name" class="text-2xl font-bold mb-4"></h2>
                 <div id="modal-details"></div>
-                <button id="close-modal-button" class="bg-gray-300 p-2 rounded-md mt-4">Close</button>
+                <button id="closeModel" class="bg-gray-300  rounded-md mt-4 px-12 py-4">Close</button>
             </div>
         </div>
 
